# terminal-emuator

./: .gitignore  Cargo.toml  build.rs  todo.txt
assets/shaders/: cursor.frag  cursor.vert  rendertext.frag  rendertext.vert  triangle.frag  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/render_gl_derive/: Cargo.toml
lib/render_gl_derive/src/: lib.rs
src/: cube.rs  graphics.rs  main.rs  processor.rs  render_gl.rs  resources.rs  shell.rs  ui.rs
src/graphics/: cursor.rs  rendertext.rs  triangle.rs
src/old/: state.rs  textfield.rs
src/render_gl/: buffer.rs  color_buffer.rs  data.rs  shader.rs  texture.rs  viewport.rs
src/ui/: state.rs  textdisplay.rs  textfield.rs
