[package]
name = "terminal-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
walkdir = "2.3"

[features]
gl_debug = ["gl/debug"]

[dependencies]
gl = { path = "lib/gl" }
render_gl_derive = { path = "lib/render_gl_derive" }
glutin = "0.31.2"
glutin-winit = "0.4.2"
thiserror = "1.0.51"
anyhow = "1.0"
nalgebra = "0.32.3"
image = "0.24.1"
rusttype = "0.9.2"
winit = { version = "0.29.10"}
raw-window-handle = "0.5.2"
# tokio = { version = "1.21.2", features = ["full"] }

[dependencies.pyo3]
version = "0.20.2"
features = ["auto-initialize"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
