[package]
name = "render_gl_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
syn = {version="1.0.91", features=["extra-traits", "parsing", "full"]}
proc-macro2="1.0.37"